# pypy

./: CMakeLists.txt  README.md  interpreter.py  requirements.txt
cases_generator/: after.h  before.h  generate_cases.py  interpreter.c.tmpl  py_generator.py  translate_to_py.py
cases_generator/c/: ast_generalizer.py  parser.py
interpreter/: interpreter.py
interpreter_generator/: .gitignore  generate_cases.py  interpreter.c.tmpl  lexer.py  py_generator.py  translate_to_py.py
